--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "history": "^5.0.0",
+    "immer": "^9.0.3",
     "polished": "^4.1.3",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
@@ -16,8 +17,12 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^7.0.4",
+    "redux": "^4.1.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.3.0",
+    "use-axios-react": "^0.2.3",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.9"
   },
@@ -44,5 +49,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/preset-typescript": "^7.14.5",
+    "@types/react-dom": "^17.0.8",
+    "@types/react-redux": "^7.1.16",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/styled-components": "^5.1.10",
+    "typescript": "^4.3.5"
   }
 }
