--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
-    "history": "^5.0.0",
+    "history": "4.10.1",
     "immer": "^9.0.3",
     "polished": "^4.1.3",
     "prop-types": "^15.7.2",
