--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@unform/core": "^2.1.6",
+    "@unform/web": "^2.1.6",
     "axios": "^0.21.1",
+    "date-fns": "^2.22.1",
     "history": "4.10.1",
     "immer": "^9.0.3",
+    "moment": "^2.29.1",
     "polished": "^4.1.3",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-datepicker": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
@@ -52,6 +57,7 @@
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.14.5",
+    "@types/react-datepicker": "^4.1.1",
     "@types/react-dom": "^17.0.8",
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
